完成Bmob短信验证,用户注册，自定义DialogView,LoadingView

--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/index_text"
+        android:text="@string/app_index_text"
         android:textSize="22sp" />
 
 </LinearLayout>
